--- a/src/routes/quote-customer/customer_quote_template.mjml
+++ b/src/routes/quote-customer/customer_quote_template.mjml
@@ -9,14 +9,15 @@
     <mj-section background-color="white" padding-bottom="0px" padding-top="0">
       <mj-column width="100%">
         <mj-text align="left" line-height="normal" font-size="13px" color="black" font-family="Ubuntu, Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px" padding-bottom="10px" padding-top="10">
-            components list:
+          components list:
 
-            <ul>
-                <li>1 x 10 kWh PowerPod</li>
-                <li>1 x EV Charger</li>
-            </ul>
+          <ul>
+            {% for item in components %}
+              <li>{{ item.quantity }} x {{ item.productName }}</li>
+            {% endfor %}
+          </ul>
 
-            total price: £10000
+          total price: £{{ totalPrice }}
         </mj-text>
       </mj-column>
     </mj-section>
