Add price calculator link to email

--- a/src/routes/quote-customer/customer_quote_template.mjml
+++ b/src/routes/quote-customer/customer_quote_template.mjml
@@ -20,6 +20,9 @@
           </ul>
 
           total price: £{{ total_price }}
+          <br>
+
+          please see the price calculator page <a href="{{ price_calculator_link }}">here</a> to adjust.
         </mj-text>
       </mj-column>
     </mj-section>
